--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.35",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -16,6 +19,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-select-search": "^3.0.7",
+    "recharts": "^2.0.10",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
